# mehul20081-Assignment-Rust-2-nebuliaq-placement-iiitd-Mehul-Singh-2024

./: Cargo.toml  readme.md
src/: client.rs  dest_server.rs  server.rs
